# smartdoor

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  logging.conf  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
demos/: AutoSeaquence.py  AutoSequence.py  conf.yaml  logging.conf
deploy/: conf.yaml  logging.conf  main.py
serviceConfig/: registerService.sh  registerServices.sh  smartdoor.service  smartdoor_restart.service  smartdoor_restart.timer  startSmartdoorService.sh  startupSmartdoorService.sh  stopSmartdoorService.sh
smartdoor/: __init__.py  default_config.toml  logging.conf  pigpio.service  smartdoor.py  smartdoor.service
smartdoor/core/: __init__.py  authenticate.py  smartlock.py
